# helixor

./: .gitignore  DAY9_INSTALL.md  README.md  pytest.ini
audit/: README.md  adversarial_ml_check.py  aml_compliance_check.py  baseline_provenance_check.py  centralization_check.py  cert_consumption_check.py  cert_refusal_check.py  consumer_integration_check.py  data_protection_check.py  death_spiral_check.py  ed25519_strictness_check.py  entrypoint_guard_audit.py  forge_high_score_check.py  freeze_cert_check.py  hardening_check.py  inflate_score_check.py  input_provenance_check.py  nation_state_check.py  production_readiness_review_2026-06-12.md  run_all.sh  scoring_provenance_check.py  securities_compliance_check.py  spof_check.py  sql_injection_check.py  (+23 more)
helixor-api/: pyproject.toml  requirements.in  requirements.txt
helixor-api/api/: __init__.py  _timescale.py  app.py  auth.py  byzantine_repo.py  cluster_health.py  evidence_repo.py  flag_obfuscation.py  main.py  metrics.py  rate_limit.py  safe_score.py  schemas.py  score_repo.py  synthetic_main.py  synthetic_seed.py  validation.py  webhooks.py
helixor-api/tests/: conftest.py  test_app.py  test_dbp4_partner_telemetry.py  test_dbp4_webhooks.py  test_diagnosis.py  test_diagnosis_pipeline.py  test_evidence_endpoint.py  test_main_network_guard.py  test_timescale_repo.py  test_vuln09_auth_and_ratelimit.py  test_vuln20_wallet_validation.py  test_vuln23_safe_score.py
helixor-programs/: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
helixor-programs/.github/workflows/: ci.yml
helixor-programs/migrations/: deploy.ts
helixor-programs/programs/certificate-issuer/: Cargo.toml
helixor-programs/programs/certificate-issuer/src/: cpi_guard.rs  errors.rs  events.rs  lib.rs  rotation.rs  signing.rs  slot_anchor.rs
helixor-programs/programs/certificate-issuer/src/instructions/: challenge_certificate.rs  get_certificate.rs  initialize_config.rs  invalidate_certificate.rs  issue_certificate.rs  migrate_issuer_config.rs  mod.rs  record_baseline.rs  register_verified_consumer.rs  revoke_verified_consumer.rs  rotate_cluster_keys.rs  transfer_authority.rs
helixor-programs/programs/certificate-issuer/src/state/: baseline_stats.rs  challenge_record.rs  health_certificate.rs  issuer_config.rs  mod.rs  score_components.rs  verified_consumer.rs
helixor-programs/programs/certificate-issuer/tests/: audit_mitigation_pins.rs  cert_payload_digest_fold_order_pin.rs  certificate_logic.rs  h01_strict_majority_threshold.rs  h02_rotation_bft_floor.rs  h03_authority_transfer.rs  h04_green_age_floor.rs  m05_config_immutability_tag.rs  m06_certificate_invalidation.rs  m06_rotation_proof_of_possession.rs  m12_alert_vector_binding.rs  ta6_freshness.rs  threshold_logic.rs  vuln16_cpi_caller.rs
helixor-programs/programs/consumer-example/: Cargo.toml
helixor-programs/programs/consumer-example/src/: lib.rs
helixor-programs/programs/health-oracle/: Cargo.toml
helixor-programs/programs/health-oracle/src/: errors.rs  events.rs  lib.rs  slot_gate.rs  state.rs
helixor-programs/programs/health-oracle/src/instructions/: advance_epoch.rs  attest_oracle_key_rotation.rs  cancel_oracle_key_rotation.rs  commit_baseline.rs  enact_oracle_key_rotation.rs  get_health.rs  initialize_epoch.rs  initialize_oracle_config.rs  migrate_registration.rs  mod.rs  propose_oracle_key_rotation.rs  register_agent.rs  rotate_advance_authority.rs  submit_score.rs  update_oracle_config.rs  update_score.rs
helixor-programs/programs/health-oracle/src/state/: agent_registration.rs  baseline_data.rs  epoch_state.rs  mod.rs  pending_oracle_rotation.rs
helixor-programs/programs/health-oracle/tests/: audit_mitigation_pins.rs  commit_baseline_logic.rs  epoch_logic.rs  m03_strict_successor_nonce.rs  m04_secondary_slot_gate.rs  m13_submit_score_escrow.rs  vuln10_baseline_cooldown.rs  vuln13_oracle_key_rotation.rs
helixor-programs/programs/slash-authority/: Cargo.toml  README.md
helixor-programs/programs/slash-authority/src/: errors.rs  events.rs  lib.rs
helixor-programs/programs/slash-authority/src/instructions/: appeal_slash.rs  attest_authority_rotation.rs  challenge_oracle.rs  enact_authority_rotation.rs  execute_slash.rs  initialize_config.rs  mod.rs  open_vault.rs  pause_settlements.rs  propose_authority_rotation.rs  resolve_appeal.rs  settle_slash.rs  update_authorities.rs  update_settle_timing.rs
helixor-programs/programs/slash-authority/src/state/: escrow_vault.rs  mod.rs  oracle_challenge.rs  pending_authority_rotation.rs  slash_config.rs  slash_record.rs  squads_transition.rs
helixor-programs/programs/slash-authority/tests/: audit_mitigation_pins.rs  dispute_logic.rs  h02_settle_active_constraint.rs  h03_treasury_snapshot_pattern.rs  h04_bounded_pause.rs  m01_appeal_concurrency.rs  m07_on_chain_settle_timing.rs  m08_executor_authority_epoch.rs  m11_settle_lamport_audit_trail.rs  m14_system_program_pin.rs  slash_logic.rs  vuln04_authority_separation.rs  vuln08_settle_timing.rs
helixor-programs/scripts/: initialize_oracle_config.ts  query_health.ts  register_test_agent.ts  setup.sh
helixor-programs/tests/: aw02_threshold_advance.integration.ts  certificate_issuer.integration.ts  cpi_epoch.integration.ts  get_health.ts  register_agent.ts  slash_authority.integration.ts  smoke.ts
helixor-programs/trident-tests/: Trident.toml
helixor-programs/trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
phylanx-programs/programs/slash-authority/: Cargo.toml
phylanx-programs/programs/slash-authority/src/: errors.rs  lib.rs
phylanx-programs/programs/slash-authority/src/instructions/: cancel_authority_rotation.rs  challenge_oracle.rs  execute_slash.rs  resolve_appeal.rs
phylanx-programs/programs/slash-authority/src/state/: mod.rs  slash_config.rs
phylanx-programs/programs/slash-authority/tests/: dispute_logic.rs  h04_absolute_pause_cap.rs  m02_clock_drift_audit_pin.rs  m14_system_program_pin.rs  slash_logic.rs  spof02_authority_rotation.rs  ta7_squads_transition.rs  vuln04_authority_separation.rs
(+1052 files in other folders)
