[workspace]
members  = ["programs/*"]
resolver = "2"

# Day 29 — workspace-wide lints. clippy::all + unused_must_use denied so
# CI fails on a warning that would otherwise hide an audit finding.
[workspace.lints.clippy]
all = "deny"

[workspace.lints.rust]
unused_must_use = "deny"

[profile.release]
# Hardening — same Day-13 standard
overflow-checks = true
lto             = "fat"
codegen-units   = 1
