[package]
name        = "certificate-issuer"
version     = "0.1.0"
edition     = "2021"
description = "Helixor V2 certificate-issuer — Day 18: HealthCertificate PDA + issue/get instructions"

[lib]
crate-type = ["cdylib", "lib"]
name       = "certificate_issuer"

[features]
default        = []
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
