[package]
name        = "certificate-issuer"
version     = "0.1.0"
edition     = "2021"
description = "Helixor V2 certificate-issuer — Day 18: HealthCertificate PDA + issue/get instructions"

[lib]
crate-type = ["cdylib", "lib"]
name       = "certificate_issuer"

[features]
default        = []
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
solana-program = "3.0.0"
solana-instructions-sysvar = "3.0.1"
solana-sdk-ids = "3.1.0"
