[package]
name    = "consumer-example"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "consumer_example"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build", "health-oracle/idl-build"]

[dependencies]
anchor-lang   = { workspace = true }

# Depend on health-oracle as a CPI source. The `cpi` feature excludes the
# entrypoint and exposes the cpi module so we can call get_health.
health-oracle = { path = "../health-oracle", features = ["cpi"] }
