[package]
name    = "health-oracle"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "health_oracle"

[features]
default        = []
# Downstream programs (e.g. consumer-example) depend on this with feature `cpi`,
# which excludes the entrypoint and exposes the cpi module.
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
