[package]
name    = "health-oracle"
version = "0.7.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "health_oracle"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
