[package]
name        = "slash-authority"
version     = "0.1.0"
edition     = "2021"
description = "Helixor V2 slash-authority — Day 20: EscrowVault + SlashRecord + tiered execute_slash"

[lib]
crate-type = ["cdylib", "lib"]
name       = "slash_authority"

[features]
default        = []
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
idl-build      = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

[lints.rust]
unexpected_cfgs = "allow"
