[package]
name        = "slash-authority"
version     = "0.1.0"
edition     = "2021"
description = "Helixor V2 slash-authority — Day 20: EscrowVault + SlashRecord + tiered execute_slash"

[lib]
crate-type = ["cdylib", "lib"]
name       = "slash_authority"

[features]
default        = []
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
solana-program = "3.0.0"
