[package]
name        = "slash-authority"
version     = "0.1.0"
edition     = "2021"
description = "Phylanx V2 slash-authority — Day 20: EscrowVault + SlashRecord + tiered execute_slash"

[lib]
crate-type = ["cdylib", "lib"]
name       = "slash_authority"

[features]
default        = []
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
idl-build      = ["anchor-lang/idl-build", "certificate-issuer/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
solana-program = "3.0.0"
# H-1: execute_slash binds the slash to an on-chain HealthCertificate owned
# by the certificate-issuer program. The `cpi` feature pulls in the callee's
# types (HealthCertificate, AlertTier, ChallengeState) + its program ID
# WITHOUT its entrypoint, so it links as a library for read-only evidence
# verification (no CPI is performed — the account is deserialized and checked).
certificate-issuer = { path = "../certificate-issuer", features = ["cpi"] }
